--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitpull",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "main": "index.js",
   "author": "Frederik Vanhevel",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "test": "lerna run test",
     "test:backend": "cd packages/backend && yarn test",
     "test:worker": "cd packages/worker && yarn test",
-    "version": "lerna version",
+    "bump": "lerna version",
     "diff": "lerna diff"
   },
   "devDependencies": {
