--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node --transpile-only src/server.ts",
-    "dev": "TSC_WATCHFILE=UseFsEventsWithFallbackDynamicPolling webpack-dev-server --mode development --hot --inline --config config/webpack.dev.config.ts",
-    "build": "webpack --config config/webpack.dev.config.ts --mode production",
+    "dev": "TSC_WATCHFILE=UseFsEventsWithFallbackDynamicPolling cp env_config/.env.default .env && webpack-dev-server --mode development --hot --inline --config config/webpack.dev.config.ts",
+    "build": "cp env_config/.env.prod .env && webpack --config config/webpack.dev.config.ts --mode production",
     "build:selector": "webpack --config config/selector.config.ts",
     "build:all": "yarn build && yarn build:selector",
     "typegen": "apollo client:codegen --config apollo.config.js --target typescript --globalTypesFile ./src/typedefs/graphql.ts typedefs",
@@ -15,16 +15,17 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
-    "@bitpull/worker": "^1.0.1",
     "@date-io/date-fns": "^2.5.0",
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/pickers": "^v4.0.0-alpha.4",
+    "@material-ui/pickers": "^v3.2.10",
     "apollo-boost": "^0.4.7",
     "apollo-link-context": "^1.0.19",
     "apollo-link-ws": "^1.0.19",
     "classnames": "^2.2.6",
-    "d3": "^5.15.1",
+    "d3-hierarchy": "^1.1.9",
+    "d3-selection": "^1.4.1",
+    "d3-zoom": "^1.8.3",
     "date-fns": "^2.11.1",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
@@ -49,7 +50,7 @@
     "yup": "^0.28.3"
   },
   "devDependencies": {
-    "@bitpull/worker": "^1.0.0",
+    "@bitpull/worker": "^1.0.1",
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/classnames": "^2.2.10",
     "@types/d3": "^5.7.2",
@@ -69,7 +70,6 @@
     "@types/webpack": "^4.41.10",
     "@types/webpack-dev-server": "^3.10.1",
     "@types/yup": "^0.26.34",
-    "bitpull-worker": "https://8af69864959bbb0756370bb1bfb8ede4414d5a1b@github.com/frederikvanhevel/bitpull-worker.git",
     "css-loader": "^3.4.2",
     "diff-match-patch": "^1.0.4",
     "dotenv-webpack": "^1.7.0",
