disable layer caching

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,9 +54,7 @@ jobs:
 
     steps:
       - checkout
-
-      - setup_remote_docker:
-          docker_layer_caching: true 
+      - setup_remote_docker
 
       - run:
           name: Apply terraform configuration
