--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,17 +1,22 @@
 FROM mhart/alpine-node:12
 
-# Add git
-RUN apk add --no-cache git
-
 # Create app directory
 WORKDIR /usr/src/app
+ENV NODE_ENV=production
 
 # Install app dependencies
-COPY package.json ./
-COPY yarn.lock ./
-RUN yarn install
+COPY package.json .
+COPY yarn.lock .
+COPY lerna.json .
+
+COPY packages/backend/package.json ./packages/backend
+
+RUN yarn global add lerna
+RUN lerna bootstrap
 
 COPY . .
+
+WORKDIR /usr/src/app/packages/backend
 
 EXPOSE 8080
 
