--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -1,22 +1,24 @@
 FROM mhart/alpine-node:12
 
-ARG BACKEND
-ENV BACKEND=$BACKEND
-
-# Add git
-RUN apk add --no-cache git
-
 # Create app directory
 WORKDIR /usr/src/app
+ENV NODE_ENV=production
 
 # Install app dependencies
-COPY package.json ./
-COPY yarn.lock ./
-RUN yarn install
+COPY package.json .
+COPY yarn.lock .
+COPY lerna.json .
+
+COPY packages/frontend/package.json ./packages/frontend
+
+RUN yarn global add lerna
+RUN lerna bootstrap
 
 COPY . .
 
-# Build frontend
+WORKDIR /usr/src/app/packages/frontend
+
+# Build
 RUN yarn build:all
 
 EXPOSE 8080
