--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
       - run: echo 'export CLEANED_BRANCH=${CIRCLE_BRANCH//\/}' >> $BASH_ENV
       - run:
           command: |
-            docker build -t "gcr.io/$GOOGLE_PROJECT_ID/frontend:latest" --build-arg BACKEND=${BACKEND} -f packages/frontend/Dockerfile .
+            docker build -t "gcr.io/$GOOGLE_PROJECT_ID/frontend:latest" -f packages/frontend/Dockerfile .
             docker push "gcr.io/$GOOGLE_PROJECT_ID/frontend:latest"
 
   push-and-deploy:
