--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -14,11 +14,9 @@ COPY ./packages/worker ./packages/worker
 RUN yarn install
 RUN npx lerna bootstrap
 
-RUN cd node_modules && ls -l
-
 WORKDIR /usr/src/app/packages/frontend
 
-ENV NODE_ENV=production
+# ENV NODE_ENV=production
 
 # Build
 RUN yarn build:all
