--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -12,11 +12,13 @@ COPY ./packages/frontend ./packages/frontend
 COPY ./packages/worker ./packages/worker
 
 RUN yarn install
-RUN npx lerna bootstrap
+# RUN npx lerna bootstrap
+
+# RUN cd node_modules && ls -l
 
 WORKDIR /usr/src/app/packages/frontend
 
-# ENV NODE_ENV=production
+ENV NODE_ENV=production
 
 # Build
 RUN yarn build:all
