--- a/k8s_config/backend/backend-env.yaml
+++ b/k8s_config/backend/backend-env.yaml
@@ -26,6 +26,8 @@ data:
   GOOGLE_CLIENT_SECRET: o0Ue3vckoHz7750Pczu7sCYR
   ONEDRIVE_CLIENT_ID: 468043c2-df81-4ecf-b833-27eb23f73f43
   ONEDRIVE_CLIENT_SECRET: xsvGAFHE^ddilKS00485@|@
+  GITHUB_CLIENT_ID: bb2e9ee1aba5b6cf5826
+  GITHUB_CLIENT_SECRET: 0a32d2ec8490ff64dde4aa634a5bcddf594469bc
 
   SENDGRID_API_KEY: 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
   EMAIL_FROM_ADDRESS: admin@bitpull.io
