--- a/k8s_config/base/backend/deployment.yaml
+++ b/k8s_config/base/backend/deployment.yaml
@@ -47,6 +47,11 @@ spec:
                 configMapKeyRef:
                   key: APP_URL
                   name: env-vars
+            - name: PUPPETEER_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  name: env-vars
+                  key: PUPPETEER_ENDPOINT
             - name: DATABASE_URI
               valueFrom:
                 configMapKeyRef:
