--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -1,4 +1,5 @@
 BACKEND=https://api.bitpull.io
+WS_BACKEND=ws://api.bitpull.io
 SLACK_CLIENT_ID=624946163541.613527388019
 DROPBOX_CLIENT_ID=v0jkjklpsz0orye
 GOOGLE_CLIENT_ID=665469788927-87lqsr8a7kensi2brvb8r04d7jo54fss.apps.googleusercontent.com
