--- a/k8s_config/base/frontend/service.yaml
+++ b/k8s_config/base/frontend/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sable-webflow
+  name: frontend
 spec:
   ports:
-    - port: 7000
+    - port: 3000
       targetPort: 8080
       name: http
   type: NodePort
