--- a/k8s_config/overlays/production/backend/cert.yaml
+++ b/k8s_config/overlays/production/backend/cert.yaml
@@ -1,11 +1,11 @@
-apiVersion: networking.gke.io/v1beta1
-kind: ManagedCertificate
+apiVersion: cert-manager.io/v1alpha2
+kind: Certificate
 metadata:
   name: backend-certificate
 spec:
-  domains:
+  dnsNames:
     - api.bitpull.io
-resource:
-  managed:
-    domains:
-      - api.bitpull.io
+  issuerRef:
+    kind: ClusterIssuer
+    name: letsencrypt
+  secretName: letsencrypt
