--- a/k8s_config/overlays/production/backend/ingress.yaml
+++ b/k8s_config/overlays/production/backend/ingress.yaml
@@ -1,11 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: backend-ingress
   annotations:
-    networking.gke.io/managed-certificates: backend-certificate
-    # kubernetes.io/ingress.global-static-ip-name: "bitpull-api" # created manually in GCP
+    cert-manager.io/cluster-issuer: letsencrypt
 spec:
+  tls:
+    - hosts:
+      - api.bitpull.io
+      secretName: letsencrypt
   rules:
   - host: api.bitpull.io
     http:
@@ -13,4 +16,8 @@ spec:
       - path: /*
         backend:
           serviceName: backend
-          servicePort: 4000
+          servicePort: http
+      - path: /
+        backend:
+          serviceName: backend
+          servicePort: http
