--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,9 +88,9 @@ jobs:
           name: Configure Third Party Applications
           command: |
             kubectl apply -f k8s_config/base/cert-manager/cert-manager.yaml
+            kubectl apply -k k8s_config/base/cert-manager/issuer.yaml
             kubectl apply -f k8s_config/base/nginx/mandatory.yaml
             kubectl apply -f k8s_config/base/nginx/cloud-generic.yaml
-            kubectl apply -k k8s_config/overlays/production/cluster-issuer
             kubectl apply -k k8s_config/overlays/production/chrome
             kubectl rollout status deployment/cert-manager --namespace cert-manager
             kubectl rollout status deployment/nginx-ingress-controller --namespace ingress-nginx
