--- a/k8s_config/base/cert-manager/issuer-resource.yaml
+++ b/k8s_config/base/cert-manager/issuer-resource.yaml
@@ -2,3 +2,13 @@ apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
+spec:
+  acme:
+    email: help@bitpull.io
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: letsencrypt
+    solvers:
+    - http01:
+        ingress:
+          class: nginx
