--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -1,5 +1,5 @@
-BACKEND=https://api.bitpull.io
-WS_BACKEND=ws://api.bitpull.io
+BACKEND=http://localhost:5000
+WS_BACKEND=ws://localhost:5000
 SLACK_CLIENT_ID=624946163541.613527388019
 DROPBOX_CLIENT_ID=v0jkjklpsz0orye
 GOOGLE_CLIENT_ID=665469788927-87lqsr8a7kensi2brvb8r04d7jo54fss.apps.googleusercontent.com
@@ -7,3 +7,6 @@ ONEDRIVE_CLIENT_ID=468043c2-df81-4ecf-b833-27eb23f73f43
 GITHUB_CLIENT_ID=bb2e9ee1aba5b6cf5826
 STRIPE_PUBLIC_KEY=pk_test_Vsmn6ZkZVsm3wblyLZKeRG7V00KQF3EPIb
 MAX_REFERRAL_CREDITS=20000
+STACKDRIVER_API_KEY=AIzaSyANfLj_peBtMktAkx1B0HM6GqS8mpJQMDA
+GCLOUD_PROJECT=bitpull
+SEGMENT_WRITE_KEY=JeEFX22KDQ7AOsY2I6EzoXIKm8mfaAOJ
