--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,6 +23,7 @@
     "@sendgrid/mail": "^7.0.0",
     "absolutify": "^0.1.0",
     "agenda": "^3.0.0",
+    "analytics-node": "^3.4.0-beta.1",
     "apollo-server": "^2.11.0",
     "apollo-server-express": "^2.11.0",
     "aws-sdk": "^2.653.0",
@@ -44,7 +45,6 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "puppeteer": "^2.1.1",
     "qs": "^6.9.3",
     "request": "^2.88.2",
     "stripe": "^8.39.0",
@@ -56,6 +56,7 @@
     "@graphql-codegen/cli": "^1.13.1",
     "@graphql-codegen/typescript": "^1.13.1",
     "@types/agenda": "^2.0.6",
+    "@types/analytics-node": "^3.1.3",
     "@types/body-parser": "^1.19.0",
     "@types/faker": "^4.1.11",
     "@types/graphql-iso-date": "^3.3.3",
