--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -2,6 +2,9 @@
   "env": {
     "browser": true
   },
+  "globals": {
+    "analytics": true
+  },
   "plugins": [
     "@typescript-eslint",
     "prettier"
