--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^v3.2.10",
+    "analytics": "^0.3.2",
     "apollo-boost": "^0.4.7",
     "apollo-link-context": "^1.0.19",
     "apollo-link-ws": "^1.0.19",
@@ -43,6 +44,7 @@
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "stackdriver-errors-js": "^0.8.0",
     "subscriptions-transport-ws": "^0.9.16",
     "typescript": "3.8.3",
     "uuidv4": "^6.0.7",
