--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -1,5 +1,5 @@
-BACKEND=http://localhost:5000
-WS_BACKEND=ws://localhost:5000
+BACKEND=https://api.bitpull.io
+WS_BACKEND=wss://api.bitpull.io
 SLACK_CLIENT_ID=624946163541.613527388019
 DROPBOX_CLIENT_ID=v0jkjklpsz0orye
 GOOGLE_CLIENT_ID=665469788927-87lqsr8a7kensi2brvb8r04d7jo54fss.apps.googleusercontent.com
