add new oauth credentials

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,7 +36,7 @@
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.0.0",
     "react-hook-form": "^5.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -54,6 +54,7 @@
     "@bitpull/worker": "^1.0.1",
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/classnames": "^2.2.10",
+    "@types/copy-webpack-plugin": "^5.0.0",
     "@types/d3": "^5.7.2",
     "@types/dotenv-webpack": "^1.7.0",
     "@types/helmet": "^0.0.45",
@@ -72,6 +73,7 @@
     "@types/webpack-dev-server": "^3.10.1",
     "@types/webpack-node-externals": "^1.7.1",
     "@types/yup": "^0.26.34",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "diff-match-patch": "^1.0.4",
     "dotenv-webpack": "^1.7.0",
