--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,13 +87,9 @@ jobs:
       - run:
           name: Configure Third Party Applications
           command: |
-            kubectl apply -f k8s_config/base/cert-manager/cert-manager.yaml
-            kubectl apply -k k8s_config/base/cert-manager/issuer.yaml
-            kubectl apply -f k8s_config/base/nginx/mandatory.yaml
-            kubectl apply -f k8s_config/base/nginx/cloud-generic.yaml
+            kubectl apply -k k8s_config/base/cert/certificate
+            kubectl apply -k k8s_config/base/cert/ingress
             kubectl apply -k k8s_config/overlays/production/chrome
-            kubectl rollout status deployment/cert-manager --namespace cert-manager
-            kubectl rollout status deployment/nginx-ingress-controller --namespace ingress-nginx
             kubectl rollout status deployment/chrome
 
   build-backend:
