--- a/k8s_config/base/chrome/deployment.yaml
+++ b/k8s_config/base/chrome/deployment.yaml
@@ -35,20 +35,20 @@ spec:
                 configMapKeyRef:
                   key: MAX_CONCURRENT_SESSIONS
                   name: env-vars
+            - name: PREBOOT_CHROME
+              value: "true"
             # - name: CONNECTION_TIMEOUT
             #   value: "900000"
-            # - name: PREBOOT_CHROME
-            #   value: "true"
-        - image: gcr.io/bitpull/pressure:latest
-          name: pressure
-          env:
-            - name: PUPPETEER_URL
-              value: "http://localhost:3000"
-            - name: CHECK_INTERVAL
-              value: "1"
-            - name: MAXIMUM_QUEUE_SIZE
-              valueFrom:
-                configMapKeyRef:
-                  key: MAX_CONCURRENT_SESSIONS
-                  name: env-vars
+        # - image: gcr.io/bitpull/pressure:latest
+        #   name: pressure
+        #   env:
+        #     - name: PUPPETEER_URL
+        #       value: "http://localhost:3000"
+        #     - name: CHECK_INTERVAL
+        #       value: "1"
+        #     - name: MAXIMUM_QUEUE_SIZE
+        #       valueFrom:
+        #         configMapKeyRef:
+        #           key: MAX_CONCURRENT_SESSIONS
+        #           name: env-vars
            
