--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,7 +17,7 @@
     "@date-io/date-fns": "^2.5.0",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/pickers": "^v3.2.10",
+    "@material-ui/pickers": "^v4.0.0-alpha.4",
     "analytics": "^0.3.2",
     "apollo-boost": "^0.4.7",
     "apollo-link-context": "^1.0.19",
