--- a/k8s_config/overlays/production/backend/kustomization.yaml
+++ b/k8s_config/overlays/production/backend/kustomization.yaml
@@ -9,16 +9,14 @@ patchesStrategicMerge:
 configMapGenerator:
   - name: env-vars
     literals:
-      - API_URL=https://api.bitpull.io
-      - APP_URL=https://app.bitpull.io
-      - PUPPETEER_ENDPOINT=ws://chrome:3000
-      - GROWSURF_CAMPAIGN_ID=89ynio
-      - DATABASE_URI=mongodb://nodeflow:iAXxgbCLF63EF@ds237588.mlab.com:37588/nodeflow
+      - API_URL='https://api.bitpull.io'
+      - APP_URL='https://app.bitpull.io'
+      - PUPPETEER_ENDPOINT='ws://chrome:3000'
       - SLACK_CLIENT_ID='624946163541.644583558804'
-      - DROPBOX_CLIENT_ID=n06dpn19abfdi2a
-      - GOOGLE_CLIENT_ID=184196915426-4030g4g18prja2f2v55u74cm08frjaq2.apps.googleusercontent.com
-      - ONEDRIVE_CLIENT_ID=860e5d27-87f5-4fab-a230-3c5d0fd6f6cc
-      - GITHUB_CLIENT_ID=bb2e9ee1aba5b6cf5826
-      - AWS_ACCESS_KEY_ID=AKIAIDDQ3OHTNYXAC6GA
-      - AWS_REGION=us-east-1
-      - AWS_S3_BUCKET=scrippy
+      - DROPBOX_CLIENT_ID='n06dpn19abfdi2a'
+      - GOOGLE_CLIENT_ID='184196915426-4030g4g18prja2f2v55u74cm08frjaq2.apps.googleusercontent.com'
+      - ONEDRIVE_CLIENT_ID='860e5d27-87f5-4fab-a230-3c5d0fd6f6cc'
+      - GITHUB_CLIENT_ID='bb2e9ee1aba5b6cf5826'
+      - AWS_ACCESS_KEY_ID='AKIAIDDQ3OHTNYXAC6GA'
+      - AWS_REGION='us-east-1'
+      - AWS_S3_BUCKET='scrippy'
