--- a/k8s_config/overlays/production/backend/kustomization.yaml
+++ b/k8s_config/overlays/production/backend/kustomization.yaml
@@ -19,4 +19,5 @@ configMapGenerator:
       - GITHUB_CLIENT_ID='bb2e9ee1aba5b6cf5826'
       - AWS_ACCESS_KEY_ID='AKIAIDDQ3OHTNYXAC6GA'
       - AWS_REGION='us-east-1'
-      - AWS_S3_BUCKET='scrippy'
+      - AWS_S3_BUCKET='bitpull'
+      - TRIAL_CREDIT_AMOUNT=500
