--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -57,7 +57,7 @@
     "prettier": "^2.0.3",
     "puppeteer": "^2.1.1",
     "ts-essentials": "^6.0.4",
-    "ts-jest": "^25.3.1",
+    "ts-jest": "25.2.1",
     "ts-node": "^8.8.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
